# SleepWell

./: .mxproject  CMakeLists.txt  SleepWell.ioc
Core/Inc/: adxl345.h  button.h  main.h  rtc.h  sd_card.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  vibrator.h
Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
Core/Src/button/: button.c
Core/Src/memory/: sd_card.c
Core/Src/rtc/: rtc.c
Core/Src/sensors/: adxl345.c
Core/Src/vibrator/: vibrator.c
Middlewares/ST/STM32_USB_Device_Library/Class/MSC/Src/: usbd_msc_storage_template.c
USB_Device/App/: usbd_storage_if.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
